# impyla

./: .coveragerc  .gitattributes  .gitignore  .landscape.yaml  .prospector.yaml  CHANGELOG.md  DEVELOP.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  TODO.md  build-dists.sh  conftest.py  ez_setup.py  generate_impyla.sh  generate_impyla.sh.old  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
dev/: merge-pr.py
examples/census/: README.md
examples/iris_model/: README.md
examples/logr/: README.md
impala/: __init__.py  _sql_model.py  _thrift_api.py  _version.py  bdf.py  beeswax.py  beeswax_client.py  blob.py  compat.py  context.py  dbapi.py  error.py  exec_summary.py  hiveserver2.py  hs2_client.py  interface.py  pandas.py  puresasl_wrapper.py  rpc.py  sasl_compat.py  sklearn.py  sqlalchemy.py  thrift_sasl.py  thrift_sasl.py.bak  udf.py  util.py
impala/_rpc/: beeswax.py  hiveserver2.py  thrift_util.py
impala/_thrift_api/: __init__.py  beeswax.py  hiveserver2.py
impala/dbapi/: __init__.py  beeswax.py  hiveserver2.py  interface.py
impala/tests/: __init__.py  _dbapi20_tests.py  classification.py  compat.py  conftest.py  test_bdf.py  test_context.py  test_data_types.py  test_dbapi_compliance.py  test_dbapi_connect.py  test_dbapi_query_parameters.py  test_hive.py  test_hive_dict_cursor.py  test_hs2_fault_injection.py  test_http_connect.py  test_impala.py  test_query_parameters.py  test_sqlalchemy.py  test_thrift_api.py  test_udf_compile.py  test_udf_execution.py  test_util.py  util.py
impala/thrift/: ErrorCodes.thrift  ExecStats.thrift  ImpalaService.thrift  Metrics.thrift  RuntimeProfile.thrift  Status.thrift  TCLIService.thrift  Types.thrift  __init__.py  beeswax.thrift  hive_metastore.thrift  process_thrift.sh
impala/udf/: __init__.py  abi.py  impl_utils.py  stringdecl.py  stringimpl.py  target.py  typeconv.py  types.py  typing.py
io/manylinux/: build.sh
jenkins/: README.md  parse-build-result.py  parse_build_result.py  run-all.sh  run-bottou.sh  run-dbapi.sh  run.sh
lib/Data/: ttypes.py
lib/DataSinks/: ttypes.py
lib/Descriptors/: constants.py  ttypes.py
lib/Exprs/: ttypes.py
lib/Frontend/: ttypes.py
lib/ImpalaInternalService/: ImpalaInternalService-remote  ImpalaInternalService.py  __init__.py  constants.py  ttypes.py
lib/ImpalaPlanService/: ImpalaPlanService-remote  ImpalaPlanService.py  __init__.py  ttypes.py
lib/ImpalaService/: ImpalaHiveServer2Service-remote  ImpalaHiveServer2Service.py  ImpalaService-remote  ImpalaService.py  __init__.py  constants.py  ttypes.py
lib/NetworkTest/: NetworkTestService-remote  NetworkTestService.py  __init__.py  ttypes.py
lib/Opcodes/: ttypes.py
lib/Partitions/: ttypes.py
lib/PlanNodes/: ttypes.py
scripts/: run-sandbox.sh  run-systest.sh
test-udf/: README.md
test-udf/clang/: CMakeLists.txt  test-udf.cc  test-udf.h
tests/: test_classification.py  test_impala.py
thrift/: ExecStats.thrift  ImpalaService.thrift  Status.thrift  TCLIService.thrift  Types.thrift  beeswax.thrift  cli_service.thrift  fb303.thrift  process_thrift.sh
(+90 files in other folders)
